--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
-    <color name="achievement_background">#f5f5f5</color>
+    <color name="black">#000000</color>
     <color name="gray_text">#bdbdbd</color>
+    <color name="gray_background_1">#f5f5f5</color>
+    <color name="gray_background_2">#eeeeee</color>
+    <color name="gray_background_3">#e0e0e0</color>
+    <color name="gray_background_4">#bdbdbd</color>
+    <color name="gray_background_5">#9e9e9e</color>
 </resources>
