--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/feed"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/feed"
-        />
+        android:title="@string/feed" />
     <item
+        android:id="@+id/map"
         android:icon="@drawable/ic_map_black_24dp"
-        android:title="@string/map"/>
+        android:title="@string/map" />
     <item
+        android:id="@+id/account"
         android:icon="@drawable/ic_account_circle_black_24dp"
-        android:title="@string/account"/>
+        android:title="@string/account" />
 </menu>
