--- a/app/src/main/res/layout/master_activity.xml
+++ b/app/src/main/res/layout/master_activity.xml
@@ -55,10 +55,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- map -->
             <RelativeLayout
                 android:id="@+id/map_container"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="@dimen/master_map_height">
 
                 <ru.yandex.yandexmapkit.MapView
                     android:id="@+id/map"
@@ -73,17 +74,32 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
+                    android:background="#afffffff"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
                     android:textColor="@color/black"
-                    android:background="#96ffffff"
-                    android:paddingLeft="5dp"
                     android:textSize="@dimen/text_size_body" />
-
             </RelativeLayout>
 
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/workers_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+            </HorizontalScrollView>
+
+
+            <!-- achievements -->
             <LinearLayout
                 android:id="@+id/achievements_container"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/achievements_container_height"
                 android:background="@color/gray_background_1"
                 android:orientation="horizontal"
                 android:padding="10dp" />
@@ -92,7 +108,7 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxHeight="120dp"
+                android:maxHeight="@dimen/master_main_image_height"
                 android:scaleType="fitCenter"
                 tools:ignore="contentDescription" />
 
@@ -120,9 +136,10 @@
                     android:textSize="@dimen/text_size_body" />
             </LinearLayout>
 
+            <!-- Schedule -->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="@dimen/master_schedule_height"
                 android:background="@color/gray_background_3">
 
                 <TextView
