--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/map_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MAP FRAGMENT"
-        android:textSize="22sp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:text="Demonstration by using Yandex Map Kit"/>
+
+    <ru.yandex.yandexmapkit.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/map"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:apiKey="1234567890"
+        android:tag="static" />
 </RelativeLayout>
