--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -81,9 +81,11 @@
                     android:textSize="@dimen/text_size_body" />
             </RelativeLayout>
 
+            <!-- workers -->
             <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/gray_background_1">
 
                 <LinearLayout
                     android:id="@+id/workers_container"
@@ -100,7 +102,7 @@
                 android:id="@+id/achievements_container"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/achievements_container_height"
-                android:background="@color/gray_background_1"
+                android:background="@color/gray_background_2"
                 android:orientation="horizontal"
                 android:padding="10dp" />
 
