--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -101,7 +101,7 @@
             <LinearLayout
                 android:id="@+id/achievements_container"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/achievements_container_height"
+                android:layout_height="@dimen/master_achievements_container_height"
                 android:background="@color/gray_background_2"
                 android:orientation="horizontal"
                 android:padding="10dp" />
@@ -152,14 +152,15 @@
                     android:textColor="@color/black" />
             </RelativeLayout>
 
+            <!-- initial cost block -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/gray_background_5"
-                android:paddingBottom="15dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="15dp">
+                android:paddingBottom="@dimen/master_initial_cost_vertical_padding"
+                android:paddingLeft="@dimen/master_initial_cost_horizontal_padding"
+                android:paddingRight="@dimen/master_initial_cost_horizontal_padding"
+                android:paddingTop="@dimen/master_initial_cost_vertical_padding">
 
                 <TextView
                     android:id="@+id/initial_cost_tv"
