--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -1,233 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    android:fitsSystemWindows="true">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/main.appbar"
-        android:layout_width="match_parent"
-        android:layout_height="225dp"
+    <android.support.design.widget.CoordinatorLayout
+        android:background="@android:color/background_light"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/main.collapsing"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-
-            <ImageView
-                android:id="@+id/toolbar_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                tools:ignore="contentDescription" />
-
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_width="match_parent">
 
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
+            android:fitsSystemWindows="true"
+            android:layout_height="225dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <!-- map -->
-            <RelativeLayout
-                android:id="@+id/map_container"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:fitsSystemWindows="true"
+                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/master_map_height">
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <ru.yandex.yandexmapkit.MapView
-                    android:id="@+id/map"
-                    android:layout_width="match_parent"
+
+                <ImageView
+                    android:fitsSystemWindows="true"
+                    android:id="@+id/toolbar_image"
                     android:layout_height="match_parent"
-                    android:apiKey="1234567890"
-                    android:tag="static" />
+                    android:layout_width="match_parent"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    tools:ignore="contentDescription" />
 
-                <TextView
-                    android:id="@+id/address_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentEnd="true"
-                    android:background="#afffffff"
-                    android:paddingEnd="5dp"
-                    android:paddingStart="5dp"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_body" />
-            </RelativeLayout>
 
-            <!-- workers -->
-            <HorizontalScrollView
-                android:layout_width="match_parent"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_width="match_parent"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <LinearLayout
                 android:layout_height="wrap_content"
-                android:background="@color/gray_background_1">
+                android:layout_width="match_parent"
+                android:orientation="vertical">
 
+                <!-- map -->
+                <RelativeLayout
+                    android:id="@+id/map_container"
+                    android:layout_height="@dimen/master_map_height"
+                    android:layout_width="match_parent">
+
+                    <ru.yandex.yandexmapkit.MapView
+                        android:apiKey="1234567890"
+                        android:id="@+id/map"
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:tag="static" />
+
+                    <TextView
+                        android:background="#afffffff"
+                        android:id="@+id/address_tv"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:paddingEnd="5dp"
+                        android:paddingStart="5dp"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_size_body" />
+                </RelativeLayout>
+
+                <!-- workers -->
+                <HorizontalScrollView
+                    android:background="@color/gray_background_1"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent">
+
+                    <LinearLayout
+                        android:id="@+id/workers_container"
+                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+
+
+                <!-- achievements -->
                 <LinearLayout
-                    android:id="@+id/workers_container"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                </LinearLayout>
-            </HorizontalScrollView>
-
-
-            <!-- achievements -->
-            <LinearLayout
-                android:id="@+id/achievements_container"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/master_achievements_container_height"
-                android:background="@color/gray_background_2"
-                android:orientation="horizontal"
-                android:padding="10dp" />
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxHeight="@dimen/master_main_image_height"
-                android:scaleType="fitCenter"
-                tools:ignore="contentDescription" />
-
-
-            <!-- opinions -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/first_opinion_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="7dp"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_body" />
-
-                <TextView
-                    android:id="@+id/see_all_opinions_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/gray_text"
-                    android:textSize="@dimen/text_size_body" />
-            </LinearLayout>
-
-            <!-- Schedule -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/master_schedule_height"
-                android:background="@color/gray_background_3">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="Здесь будет расписание"
-                    android:textColor="@color/black" />
-            </RelativeLayout>
-
-            <!-- initial cost block -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/gray_background_5"
-                android:paddingBottom="@dimen/master_initial_cost_vertical_padding"
-                android:paddingLeft="@dimen/master_initial_cost_horizontal_padding"
-                android:paddingRight="@dimen/master_initial_cost_horizontal_padding"
-                android:paddingTop="@dimen/master_initial_cost_vertical_padding">
-
-                <TextView
-                    android:id="@+id/initial_cost_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_body" />
-            </LinearLayout>
-
-            <!-- radio -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/gray_background_2"
-                android:orientation="vertical"
-                android:paddingTop="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
-                    android:text="Виды маникюра"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_body" />
-
-                <RadioGroup
+                    android:background="@color/gray_background_2"
+                    android:id="@+id/achievements_container"
+                    android:layout_height="@dimen/master_achievements_container_height"
                     android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:padding="10dp" />
+
+                <ImageView
+                    android:id="@+id/image"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp">
+                    android:layout_width="match_parent"
+                    android:maxHeight="@dimen/master_main_image_height"
+                    android:scaleType="fitCenter"
+                    tools:ignore="contentDescription" />
 
-                    <RadioButton
-                        android:layout_width="wrap_content"
+
+                <!-- opinions -->
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/first_opinion_tv"
                         android:layout_height="wrap_content"
-                        android:text="Обрезной / классический . +0 р"
+                        android:layout_marginBottom="7dp"
+                        android:layout_width="wrap_content"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_size_body" />
 
-                    <RadioButton
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/see_all_opinions_tv"
                         android:layout_height="wrap_content"
-                        android:text="Аппаратный . +200 р"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/gray_text"
+                        android:textSize="@dimen/text_size_body" />
+                </LinearLayout>
+
+                <!-- Schedule -->
+                <RelativeLayout
+                    android:background="@color/gray_background_3"
+                    android:layout_height="@dimen/master_schedule_height"
+                    android:layout_width="match_parent">
+
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="Здесь будет расписание"
+                        android:textColor="@color/black" />
+                </RelativeLayout>
+
+                <!-- initial cost block -->
+                <LinearLayout
+                    android:background="@color/gray_background_5"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:paddingBottom="@dimen/master_initial_cost_vertical_padding"
+                    android:paddingLeft="@dimen/master_initial_cost_horizontal_padding"
+                    android:paddingRight="@dimen/master_initial_cost_horizontal_padding"
+                    android:paddingTop="@dimen/master_initial_cost_vertical_padding">
+
+                    <TextView
+                        android:id="@+id/initial_cost_tv"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_size_body" />
+                </LinearLayout>
+
+                <!-- radio -->
+                <LinearLayout
+                    android:background="@color/gray_background_2"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp">
+
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_width="wrap_content"
+                        android:text="Виды маникюра"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_size_body" />
 
-                    <RadioButton
-                        android:layout_width="wrap_content"
+                    <RadioGroup
                         android:layout_height="wrap_content"
-                        android:text="Комбинированный . +0 р"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_body" />
+                        android:layout_marginTop="5dp"
+                        android:layout_width="match_parent">
 
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Европейский . +0 р"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_body" />
-                </RadioGroup>
+                        <RadioButton
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="Обрезной / классический . +0 р"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_size_body" />
+
+                        <RadioButton
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="Аппаратный . +200 р"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_size_body" />
+
+                        <RadioButton
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="Комбинированный . +0 р"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_size_body" />
+
+                        <RadioButton
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="Европейский . +0 р"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_size_body" />
+                    </RadioGroup>
+                </LinearLayout>
+
+                <View
+                    android:layout_height="400dp"
+                    android:layout_width="match_parent" />
+
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="400dp" />
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
-</android.support.design.widget.CoordinatorLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </android.support.design.widget.CoordinatorLayout>
+</layout>
