--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -95,7 +95,7 @@
                 </HorizontalScrollView>
 
 
-                <!-- achievements -->
+                <!-- signs -->
                 <LinearLayout
                     android:background="@color/gray_background_2"
                     android:id="@+id/achievements_container"
