--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="gray_background_3">#e0e0e0</color>
     <color name="gray_background_4">#bdbdbd</color>
     <color name="gray_background_5">#9e9e9e</color>
+
+    <!-- view pager dots -->
+    <color name="view_pager_active_dot">@color/black</color>
+    <color name="view_pager_inactive_dot">@color/gray_background_3</color>
 </resources>
