--- a/app/src/main/res/values/image_slider_dimens.xml
+++ b/app/src/main/res/values/image_slider_dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="image_slider_bottom_bar_margin_top">10dp</dimen>
     <dimen name="image_slider_bottom_bar_horizontal_padding">20dp</dimen>
     <dimen name="image_slider_height">240dp</dimen>
+    <dimen name="image_slider_dots_size">8sp</dimen>
 </resources>
