--- a/app/src/main/res/values/master_dimens.xml
+++ b/app/src/main/res/values/master_dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="master_map_height">100dp</dimen>
     <dimen name="master_workers_container_padding_vertical">10dp</dimen>
     <dimen name="master_worker_border_width">1dp</dimen>
+    <dimen name="master_worker_name_text_size">14sp</dimen>
     <dimen name="master_space_between_workers">10dp</dimen>
     <dimen name="master_worker_photo_size">64dp</dimen>
     <dimen name="master_signs_container_height">50dp</dimen>
