Initial cost TextView

--- a/app/src/main/res/layout/image_slider_with_footer.xml
+++ b/app/src/main/res/layout/image_slider_with_footer.xml
@@ -26,6 +26,16 @@
                 android:orientation="horizontal"
                 android:padding="@dimen/feed_signs_container_padding" />
 
+            <TextView
+                android:id="@+id/initial_cost"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/white" />
+
         </RelativeLayout>
 
 
