--- a/app/src/main/res/layout/master_activity.xml
+++ b/app/src/main/res/layout/master_activity.xml
@@ -142,6 +142,36 @@
 
                     <View style="@style/Divider" />
 
+                    <!-- Signs and reviews -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <HorizontalScrollView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/reviews_container"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                            </LinearLayout>
+                        </HorizontalScrollView>
+
+                        <TextView
+                            android:id="@+id/see_all_n_reviews"
+                            style="@style/TextAppearance.AppCompat.Body1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:textColor="@color/colorAccent" />
+                    </LinearLayout>
+
+                    <View style="@style/Divider" />
+
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
