--- a/app/src/main/res/drawable/review_shape.xml
+++ b/app/src/main/res/drawable/review_shape.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid
-        android:color="@color/gray_background_2" />
-
-    <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp" />
-
-    <corners android:radius="8dp" />
+    <solid android:color="@color/gray_background_2" />
+    <corners android:radius="@dimen/master_review_radius" />
 </shape>
