--- a/app/src/main/res/layout/master_review.xml
+++ b/app/src/main/res/layout/master_review.xml
@@ -3,26 +3,30 @@
     android:layout_width="@dimen/master_review_width"
     android:layout_height="@dimen/master_review_height"
     android:background="@drawable/review_shape"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/master_review_padding_bottom"
+    android:paddingEnd="@dimen/master_review_padding_end"
+    android:paddingStart="@dimen/master_review_padding_start"
+    android:paddingTop="@dimen/master_review_padding_top">
 
     <TextView
         android:id="@+id/review_title"
-        style="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/TextAppearance.AppCompat.Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/review_date"
-        style="@style/TextAppearance.AppCompat.Body1"
+        style="@style/TextAppearance.AppCompat.Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="@dimen/master_review_date_margin_top" />
 
     <TextView
         android:id="@+id/review_text"
-        style="@style/TextAppearance.AppCompat.Body2"
+        style="@style/TextAppearance.AppCompat.Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="@dimen/master_review_text_margin_top" />
 
 </LinearLayout>
