--- a/app/src/main/res/values/master_dimens.xml
+++ b/app/src/main/res/values/master_dimens.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="master_side_elements_padding">10dp</dimen>
-    <dimen name="master_elements_vertical_padding">10dp</dimen>
-    <dimen name="master_map_height">100dp</dimen>
-    <dimen name="master_workers_container_padding_vertical">10dp</dimen>
-    <dimen name="master_worker_border_width">1dp</dimen>
-    <dimen name="master_worker_name_text_size">14sp</dimen>
-    <dimen name="master_space_between_workers">10dp</dimen>
-    <dimen name="master_worker_photo_size">64dp</dimen>
-    <dimen name="master_signs_container_height">50dp</dimen>
-    <dimen name="master_space_between_signs">15dp</dimen>
-    <dimen name="master_main_image_height">120dp</dimen>
-    <dimen name="master_schedule_height">200dp</dimen>
-    <dimen name="master_image_slider_height">240dp</dimen>
-    <dimen name="master_switch_padding_vertical">15dp</dimen>
-    <dimen name="master_divider_height">1dp</dimen>
+    <dimen name="master_image_slider_height">200dp</dimen>
+    <dimen name="master_title_margin_top">16dp</dimen>
+    <dimen name="master_rating_margin_top">11dp</dimen>
+    <dimen name="master_description_margin_top">19dp</dimen>
     <dimen name="master_space_between_stars">2dp</dimen>
+    <dimen name="master_space_between_stars_and_text">12dp</dimen>
+    <dimen name="master_space_between_description_and_divider">20dp</dimen>
+    <dimen name="master_space_between_divider_and_metro">15dp</dimen>
+    <dimen name="master_address_description_margin_top">2dp</dimen>
+    <dimen name="master_icon_map_size">40dp</dimen>
+    <dimen name="master_space_between_address_and_divider">15dp</dimen>
+    <dimen name="master_space_between_divider_and_reviews">20dp</dimen>
     <dimen name="master_review_height">122dp</dimen>
     <dimen name="master_review_width">280dp</dimen>
-    <dimen name="master_space_between_reviews">15dp</dimen>
+    <dimen name="master_review_radius">8dp</dimen>
+    <dimen name="master_review_padding_start">16dp</dimen>
+    <dimen name="master_review_padding_top">16dp</dimen>
+    <dimen name="master_review_padding_end">16dp</dimen>
+    <dimen name="master_review_padding_bottom">20dp</dimen>
+    <dimen name="master_review_date_margin_top">2dp</dimen>
+    <dimen name="master_review_text_margin_top">16dp</dimen>
+    <dimen name="master_space_between_reviews">8dp</dimen>
+    <dimen name="master_see_all_reviews_margin_top">16dp</dimen>
+    <dimen name="master_space_between_see_all_reviews_and_divider">20dp</dimen>
+    <dimen name="master_space_between_divider_and_visit_options">36dp</dimen>
+    <dimen name="master_filter_buttons_margin_top">16dp</dimen>
+    <dimen name="master_filter_buttons_height">40dp</dimen>
+    <dimen name="master_space_between_filter_buttons_and_divider">20dp</dimen>
+    <dimen name="master_space_divider_and_suitable_masters">20dp</dimen>
 </resources>
